# RustyLLM

./: .actrc  .gitignore  BENCHMARK.md  Cargo.toml  Makefile  README.md  app.js  bench_models.ps1  bench_models.sh  build.rs  index.html  make.cmd  make.ps1  style.css
.github/workflows/: ci.yml  pages.yml  release.yml
demo/wasm/: index.html
demo/wasm/pkg/: rusty_llm.d.ts  rusty_llm.js  rusty_llm_bg.wasm.d.ts
docs/: AI_FOR_DEVELOPERS.md  ARCHITECTURE.md  FUNCTION_REFERENCE.md  MTP.md
scripts/: RustyLLM.Build.psm1
skills/default/german-technical-writing/: SKILL.md
skills/default/local-llm-troubleshooting/: SKILL.md
skills/default/rust-code-review/: SKILL.md
skills/default/skill-authoring/: SKILL.md
src/: catalog.rs  gguf.rs  lib.rs  main.rs  metal.rs  metal_backend.m  mmap.rs  model.rs  runtime.rs  sampling.rs  server.rs  session.rs  simd.rs  skills.rs  tokenizer.rs
src/web_ui/: chat.html  expert.html  explorer.html  explorer.js  script.js  style.css
