[package]
name = "rusty-llm"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
description = "LLM inference engine — NEON (Apple Silicon) + AVX2 (x86)"
build = "build.rs"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = ["cli", "server", "tls"]
cli = ["dep:serde_json"]
server = ["dep:serde", "dep:serde_json"]
tls = ["server", "dep:rustls", "dep:rustls-pemfile"]
wasm = ["dep:wasm-bindgen", "dep:js-sys"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
wasm-bindgen = { version = "=0.2.100", optional = true }
js-sys = { version = "=0.3.77", optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rustls = { version = "0.23", default-features = false, features = ["ring", "std"], optional = true }
rustls-pemfile = { version = "2", optional = true }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[[bin]]
name = "rusty-llm"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "analyze_gguf"
path = "src/bin/analyze_gguf.rs"
required-features = ["cli"]

[[bin]]
name = "embedding_demo"
path = "src/bin/embedding_demo.rs"
required-features = ["cli"]

[[bin]]
name = "list_tensors"
path = "src/bin/list_tensors.rs"
required-features = ["cli"]
