[package]
name = "rusty-llm"
version = "5.0.2"
edition = "2024"
rust-version = "1.95"
description = "Lightweight, educational GGUF AI-inference runner in Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/SimonWaldherr/RustyLLM"
keywords = ["gguf", "llm", "inference", "metal", "wasm"]
categories = ["command-line-utilities", "science"]
build = "build.rs"
default-run = "rusty-llm"
resolver = "3"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = ["full"]
full = ["cli", "server", "tls", "metal"]
cli = ["dep:serde_json"]
server = ["dep:serde", "dep:serde_json"]
tls = ["server", "dep:rustls", "dep:rustls-pemfile"]
metal = []
wasm = ["dep:wasm-bindgen", "dep:js-sys"]

[dependencies]
serde = { version = "1", default-features = false, features = ["derive", "std"], optional = true }
serde_json = { version = "1", default-features = false, features = ["std"], optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rustls = { version = "0.23", default-features = false, features = ["ring", "std"], optional = true }
rustls-pemfile = { version = "2", optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = { version = "=0.2.100", optional = true }
js-sys = { version = "=0.3.77", optional = true }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = "line-tables-only"

[profile.wasm-release]
inherits = "release"
opt-level = "z"

[[bin]]
name = "rusty-llm"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "analyze_gguf"
path = "src/bin/analyze_gguf.rs"
required-features = ["cli"]

[[bin]]
name = "embedding_demo"
path = "src/bin/embedding_demo.rs"
required-features = ["cli"]

[[bin]]
name = "list_tensors"
path = "src/bin/list_tensors.rs"
required-features = ["cli"]
